--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,8 @@
     <body>
         <p>Welcome KL chat app!!</p>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-        <script>
-            var socket = io();  // used to listecn to data from server, and to send info back
-            socket.on('connect', ()=>{
-                console.log('connected to server');
-            })
-
-            socket.on('disconnect', ()=>{
-                console.log('disconnected from server');
-            })
+        <script src="/js/index.js">
+         
         </script>
     </body>
 </html>
